bk_ida/gccida/c3/get_attr_prefix_0f
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20301:4: error: expected ';' after expression
rtx v20; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20301:5: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx v20; // rcx 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20291:6: note: 'v10' declared here
bool v10; // cf 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20311:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v16 = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20313:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 20323, "get_attr_prefix_0f"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20313:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 20323, "get_attr_prefix_0f"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20549:71: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( ( unsigned int)( which_alternative - 2) <= 2 && aligned_operand( recog_data_0.operand[1], HImode) ) 
                                                                      ^~~~~~~~~~~~
                                                                      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20591:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !q_regs_operand( recog_data_0.operand[0], QImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20667:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtx = recog_data_0.operand[0]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20668:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[0] == 67 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20669:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtx = recog_data_0.operand[0]->fld[0].rtx; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20686:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v8 = recog_data_0.operand[0]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20687:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[0] == 67 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20688:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v8 = recog_data_0.operand[0]->fld[0].rtx; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20701:1: error: use of undeclared identifier 'v20'
v20 = recog_data_0.operand[0]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20701:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v20 = recog_data_0.operand[0]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20702:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[0] == 67 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20703:1: error: use of undeclared identifier 'v20'
v20 = recog_data_0.operand[0]->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20703:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v20 = recog_data_0.operand[0]->fld[0].rtx; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/insn-attrtab.c:20704:19: error: use of undeclared identifier 'v20'
v21 = v19->data.i[v20->fld[0].rtint]; 
                  ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_prefix_0f/src/obj/insn-attrtab.o] Error 1
